VP 10.5.0 Changelog
------------------------

- allow reels and textboxes to be moved via the script (and textboxes can also be placed at floating point precision level)

- fix detection of used materials (bumpers, triggers & kickers were missing) and used images (color grading LUT was missing)

- fix sound device selection/mapping for music (e.g. usually the backglass device)

- update BASS library to 2.4.13

- see core scripts (header of core.vbs) for the respective changelog (version 3.56)
- see CommandReference.txt for the changelog of all the scripting properties/interface changes

- DirectX 8 port for input handling (currently disabled)

VP 10.4.0 Changelog
------------------------

- add support for loading POV/backdrop settings automatically: One can define an extra POV(.pov) file for each table, named like the VPX file.
  Example: you have some custom POV settings for the table "QBerts Quest (Gottlieb 1983).vpx". Save the POV settings into the file
           "QBerts Quest (Gottlieb 1983).pov" and place it in the same directory as the VPX file. VPX will then also load the POV settings
           automatically when loading the "QBerts Quest (Gottlieb 1983).vpx" (in the editor/player).
  Or if you like to have default POV settings that are used for any other tables, save it as "autopov.pov".
- in addition, there is also -Pov [filename] to load, export POV settings and then close VPX (via the command line)

- change context menu behavior of add/remove to collection: it's now possible to add/remove one or multiple elements to other collections. 
  If you selected multiple elements but they are not part of the same collection/or are not part of any collection
  the context menu is greyed out and the check marks tell you which collections were found for these selected elements.
  
- add Rotate/Scale around origin option to the rotate/scale dialog.
  Simply uncheck "Rotate around origin" or "Scale around origin" to rotate/scale around the mouse position.