@@ -1562,7 +1562,7 @@ BEGIN
     LTEXT           "FSS Image",IDC_STATIC,7,82,60,8
     COMBOBOX        DISPID_Image8,7,92,113,69,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     CONTROL         "FSS mode (add. BG space)",IDC_BG_FSS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,106,109,10
-    CONTROL         "Test desktop",13434,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,117,109,10
+    CONTROL         "Test Desktop",13434,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,117,109,10
     EDITTEXT        104,64,143,56,12,ES_CENTER | ES_AUTOHSCROLL
     EDITTEXT        105,64,156,56,12,ES_CENTER | ES_AUTOHSCROLL
     EDITTEXT        1040,64,169,56,12,ES_CENTER | ES_AUTOHSCROLL
